Remove default values from input fields
Removed default values from input fields for explorations, AP items, owned shovels, and shovel purchases.

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
   <h1>🧮 廃墟の宝探し計算ツール</h1>
 
   <label>希望探索回数</label>
-  <input type="number" id="explorations" value="400">
+  <input type="number" id="explorations">
 
   <label>所持APアイテム数</label>
-  <input type="number" id="apItems" value="20">
+  <input type="number" id="apItems">
 
   <label>所持スコップ数</label>
-  <input type="number" id="ownedShovels" value="25">
+  <input type="number" id="ownedShovels">
 
   <label>購入したいスコップ数（最大10）</label>
-  <input type="number" id="shovelPurchase" value="10">
+  <input type="number" id="shovelPurchase">
 
   <button onclick="calculate()">計算する</button>
 
