--- a/index.html
+++ b/index.html
@@ -102,8 +102,11 @@
 ---
 
 🔍 内訳
-・スコップ購入: ${diamondForShovels}ダイヤ（${buyableShovels}個、希望: ${shovelPurchaseCount}個）
-・AP購入: ${diamondForAP}ダイヤ（アイテム ${extraAPItems}個）
+・スコップ購入: ${diamondForShovels}ダイヤ  
+　購入数: ${buyableShovels}個
+
+・AP購入: ${diamondForAP}ダイヤ  
+　追加アイテム数: ${extraAPItems}個
 
 ---
 
@@ -115,7 +118,8 @@
 ・必要ドロップ: ${neededDrops}個
 ・訪問回数: ${neededVisits}回
 ・必要AP: ${neededAP}AP
-・所持AP: ${ownedAP}AP（アイテム ${ownedAPItems}個）
+・所持AP: ${ownedAP}AP  
+　所持アイテム数: ${ownedAPItems}個
 ・不足AP: ${lackingAP}AP
         `;
         document.getElementById("output").textContent = result;
